Add User Story 2

--- a/app/views/candy_shops/index.html.erb
+++ b/app/views/candy_shops/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Candy Shops</h1>
 <% @candy_shops.each do |shop| %>
-<p><a href="/candy_shops/<%= shop.id %>"><%= shop.name %></a></p>
+<h3><a href="/candy_shops/<%= shop.id %>"><%= shop.name %></a></h3>
 <% end %>
