Update show view to include location

--- a/app/views/candy_shops/show.html.erb
+++ b/app/views/candy_shops/show.html.erb
@@ -1,4 +1,2 @@
 <h1><%= @candy_shop.name %></h1>
-<p><%= "Id: #{@candy_shop.id}" %></p>
-<p><%= "Created At: #{@candy_shop.created_at}" %></p>
-<p><%= "Updated At: #{@candy_shop.updated_at}" %></p>
+<p><%= "Location: #{@candy_shop.state}" %></p>
