--- a/app/views/distribution_centers/index.html.erb
+++ b/app/views/distribution_centers/index.html.erb
@@ -3,3 +3,5 @@
 <% @distribution_centers.each do |distribution_center| %>
 <h3><a href="/distribution_centers/<%= distribution_center.id %>"> <%= distribution_center.name %></a></h3>
 <% end %>
+
+<a href="/distribution_centers/new">New Distribution Center</a>
