--- a/app/views/candy_shops/new.html.erb
+++ b/app/views/candy_shops/new.html.erb
@@ -1,8 +1,13 @@
 <h1>Fill in this form to enter a new Candy Shop!</h1>
-<%= form_for(@candy_shop) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  
-  <%= f.label :state %>
-  <%= f.text_field :state %>
+
+<%= form_tag '/candy_shops' do %>
+  <%= label_tag :name %>
+  <%= text_field_tag :name %>
+  <br>
+  <br>
+  <%= label_tag :state %>
+  <%= text_field_tag :state %>
+  <br>
+  <br>
+  <%= submit_tag 'Create Candy Shop' %>
 <% end %>
