--- a/app/views/distribution_centers/show.html.erb
+++ b/app/views/distribution_centers/show.html.erb
@@ -4,3 +4,5 @@
 <p> <%= "Created: #{@distribution_center.created_at}" %></p>
 <p> <%= "Updated: #{@distribution_center.updated_at}" %></p>
 <p> <%= "Trucks Deployed: #{@distribution_center.trucks_deployed}" %></p>
+
+<%= link_to "Update Distribution Center", "/distribution_centers/#{@distribution_center.id}/edit" %>
