Add functionality for user story 9

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -3,6 +3,6 @@
 <% @stores.each do |store| %>
   <h2><%= store.name %></h2>
   <p>Shipments Received: <%= store.shipments_received %></p>
-  <p>DC ID: <%= store.distribution_centers_id %></p>
+  <p>DC ID: <%= store.distribution_center_id %></p>
   <p>Open: <%= store.open %></p>
 <% end %>
