--- a/app/views/distribution_centers_stores/index.html.erb
+++ b/app/views/distribution_centers_stores/index.html.erb
@@ -3,6 +3,8 @@
 <% @stores_by_dc.each do |store| %>
   <h2><%= store.name %></h2>
   <p>Shipments Received: <%= store.shipments_received %></p>
-  <p>DC ID: <%= store.distribution_centers_id %></p>
+  <p>DC ID: <%= store.distribution_center_id %></p>
   <p>Open: <%= store.open %></p>
 <% end %>
+
+<%= link_to "Create Store", "/distribution_centers/#{params[:id]}/stores/new"%>
