--- a/app/views/candy_shops_candies/index.html.erb
+++ b/app/views/candy_shops_candies/index.html.erb
@@ -7,4 +7,4 @@
   <p>Candy Shop Id: <%= candy.candy_shop_id %></p>
 <% end %>
 
-<%= link_to 'Create Candy', '/candy_shops/:id/candies/new' %>
+<%= link_to 'Create Candy', "/candy_shops/#{params[:id]}/candies/new" %>
