--- a/app/views/candies/show.html.erb
+++ b/app/views/candies/show.html.erb
@@ -2,3 +2,5 @@
 <p>Quantity: <%= @candy.quantity %></p>
 <p>In Stock: <%= @candy.in_stock %></p>
 <p>Candy Id: <%= @candy.id %></p>
+
+<%= link_to 'Update Candy', "/candies/#{params[:id]}/edit" %>
