Add user story 10 and 11

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -3,4 +3,6 @@
 <p> Shipments Received: <%= "#{@store.shipments_received}" %> </p>
 <p> Open: <%= "#{@store.open}" %> </p>
 
+<%= link_to "Update Store", store_edit_path %>
+<%= button_to "Delete Store", store_show_path, method: :delete %>
 
