Add button for Delete Candy with method :delete

--- a/app/views/candies/show.html.erb
+++ b/app/views/candies/show.html.erb
@@ -4,3 +4,6 @@
 <p>Candy Id: <%= @candy.id %></p>
 
 <%= link_to 'Update Candy', "/candies/#{params[:id]}/edit" %>
+<br>
+<br>
+<%= button_to 'Delete Candy', "/candies/#{params[:id]}", method: :delete %>
