--- a/app/views/candies/index.html.erb
+++ b/app/views/candies/index.html.erb
@@ -5,4 +5,6 @@
   <p>Quantity: <%= candy.quantity %></p>
   <p>In Stock: <%= candy.in_stock %></p>
   <p>Candy Shop Id: <%= candy.candy_shop_id %></p>
+  <% date = candy.created_at %>
+  <p>Created On: <%= date.strftime("%m/%d/%y") %></p>
 <% end %>
