Add form to collect user input of quantity-not functional

--- a/app/views/candies/index.html.erb
+++ b/app/views/candies/index.html.erb
@@ -8,3 +8,13 @@
   <% date = candy.created_at %>
   <p>Created On: <%= date.strftime("%m/%d/%y") %></p>
 <% end %>
+<br>
+<br>
+<h4>Only return Candies with a quantity more than:</h4>
+<%# <%= form_tag("/candies"), method: :get) do %>
+<%# <%= label_tag :type_quantity_here %> %>
+<%# <%= text_field_tag :type_quantity_here %> %>
+<br>
+<br>
+<%# <%= submit_tag "Submit" %> %>
+<%# <% end %> %> %>
